# tabula

./: .gitignore  Cargo.toml  README.md
src/: account.rs  cli.rs  invoice.rs  lib.rs  main.rs  output.rs  poc_ledger.rs
src/account/: account_aggregate.rs  account_command.rs  account_errors.rs  account_event.rs  account_services.rs  aggregate.rs  command.rs  errors.rs  event.rs  services.rs
src/adapters/: cli.rs  ledger_storage.rs  mod.rs
src/adapters/cli/: arguments.rs
src/commands/: mod.rs
src/domain/: invoice.rs
tests/: integration_tests.rs
tests/fixtures/: invoices.beancount
