[package]
name = "tabula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
cqrs-es = "0.4.8"
beancount-parser = { version = "0.2.0", git = "https://github.com/twilco/beancount.git" }
beancount-core = { version = "0.2.0", git = "https://github.com/twilco/beancount.git" }
beancount-render = { version = "0.1.0", git = "https://github.com/twilco/beancount.git" }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
