[package]
name = "tabula"
version = "0.1.0"
edition = "2021"
default-run = "tabula"

[[bin]]
name = "poc-ledger"
path = "src/poc_ledger.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
cqrs-es = "0.4.8"
beancount-parser = { version = "0.2.0", git = "https://github.com/twilco/beancount.git" }
beancount-core = { version = "0.2.0", git = "https://github.com/twilco/beancount.git", features = ["chrono"] }
beancount-render = { version = "0.1.0", git = "https://github.com/twilco/beancount.git" }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "1.0.5"
